Version next
* Tweak some preference UI strings.
* Rewrite the CSS background editor using XBL.
* Add support for background-repeat to the simple editor.
* Add support for background-position to the simple editor.
* Add preview progress bars to the editor.
* Add a preference to control Firefox's domain highlighting in the location bar.

Version 2011.05.07.18b
* Firefox 6.0a1 changed the nsIDOMWindow interface ID. Make S4E compatible.
* Fix unchecked usage of the urlbar element (causes errors when it's not on a toolbar).
* Minimize contact with the XULBrowserWindow object, and make binding to it dynamic and [hopefully] more robust.
* Refactor some repetitive code, and use array based generation/execution for repetitive tasks.
* Added translations for: el, es-ES, he, nb-NO
* Updated translations for: ro

Version 2011.04.06.18
* Make sure the urlbar placeholder text is hidden when showing link/status.
* Add new strings for all translations.
* Added translations for: cs, ru

Version 2011.04.02.18b
* Add strings that were removed from Firefox 4.2a1pre.
* Centralize stringbundle DOM calls.
* Added translations for: eo
* Updated translations for: bg-BG, hsb-DE

Version 2011.04.01.00
* Localize the install manifest.
* Add new strings for all translations.
* Added translations for: bg-BG, hsb-DE
* Updated translations for: da, fr, hu, it-IT, ro, zh-CN

Version 2011.03.27.22b
* Put S4E style borders (for the Add-on Bar and other bottom toolbars) behind a preference. Disable by default.
* Set urlbar compatibility function shims on the prototype instead of the instance. Fixes compatibility with dynamic bindings (i.e. Smart Text).
* If there are only paused downloads, show the paused count in the button and tooltip ('unknown time remaining' is useless).
* Fix assertion in Firefox 4.2a1pre.
* Add status text getters (better extension integration support).
* Remove delay before showing link/status in the urlbar.