@@ -56,6 +56,9 @@
 <!ENTITY status4evar.status.statusText "Status Text">
 <!ENTITY browser.urlbar.formatting.enabled.label "Enable Firefox's domain highlighting">
 
+<!ENTITY status4evar.status.popup.mouseMirror.label "Move to the opposite side when moused over">
+<!ENTITY status4evar.status.popup.findMirror.label "Start on the right when the Find Bar is open">
+
 
 
 <!ENTITY status4evar.progress.style.label "Use a custom style">
