@@ -5,6 +5,8 @@ Version next
 * Add support for background-position to the simple editor.
 * Add preview progress bars to the editor.
 * Add a preference to control Firefox's domain highlighting in the location bar.
+* Add a preference to control statusbar-display mirroring on mouse-over.
+* Add a preference to control statusbar-display mirroring on find bar open.
 
 Version 2011.05.07.18b
 * Firefox 6.0a1 changed the nsIDOMWindow interface ID. Make S4E compatible.
